# fastparquet-reproduction

./: .gitattributes  README.md  candles-7d.parquet  fastparquet-decompression-error.py  fastparquet-read-missing-data.py  fastparquet-struggle-to-read.py  lending-reserves-all.parquet  pyproject.toml
