[tool.poetry]
name = "fastparquet-bugsies"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastparquet = "^2023.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
